<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">


    <TextView
        android:id="@+id/textC346"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="18dp"
        android:text="@string/C346" />

    <TextView
        android:id="@+id/textC203"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="18dp"
        android:text="@string/C203" />

    <TextView
        android:id="@+id/textC235"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="18dp"
        android:text="@string/C235" />

    <TextView
        android:id="@+id/textC218"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="18dp"
        android:text="@string/C218" />

    <TextView
        android:id="@+id/textC206"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="18dp"
        android:text="@string/C206" />
</LinearLayout>
